prevents slide up on mobile

--- a/public/assets/css/idc.css
+++ b/public/assets/css/idc.css
@@ -48,3 +48,23 @@
     opacity: 1;
     transform: translateY(-75px);
 }
+@media only screen and (max-width: 767px) {
+    .fade-up {
+        opacity: 0;
+        transform: translateY(0%);
+        transition: all 1.0s ease-out;
+    }
+    .fade-up-active {
+        opacity: 1;
+        transform: translateY(-0%);
+    }
+    .fade-up-slow {
+        opacity: 0;
+        transform: translateY(0%);
+        transition: all 1.1s ease-out;
+    }
+    .fade-up-slow-active {
+        opacity: 1;
+        transform: translateY(-0%);
+    }
+}
